# subtitle-studio

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
python-sidecar/: README.md  build_binary.py  pyproject.toml  worker-aarch64-apple-darwin.spec
python-sidecar/worker/: ass_writer.py  chroma_key.py  main.py  srt.py  whisper_engine.py
scripts/: make_app_icon.py  release.sh
src/: App.tsx  index.css
src-tauri/: ._target  2026-05-03-214243-local-command-caveatcaveat-the-messages-below.txt  Cargo.toml  tauri.conf.json
src-tauri/assets/ambient/: ac_hum.opus  computer_fans.opus  distant_rumble.opus  empty_room.opus  hall_ambient.opus  hall_crowd.opus  museum_crowd.opus  park_birds.opus  people_museum.opus  pink_room.opus  refrigirator_humming.opus  room_tone.opus  street.opus  white_air.opus  wind.opus  wind_mic.opus
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fonts.rs  lib.rs  main.rs  paths.rs  pipeline.rs  presets.rs  preview.rs  proc.rs  queue.rs  settings.rs  setup.rs  setup_venv.rs  sidecar.rs  srt_io.rs
src/components/: Dropdown.tsx  ExtraComponentCard.tsx  GlassCard.tsx  GoldenGlow.tsx  Logo.tsx  OutputDirCard.tsx  PixelSpinner.tsx  ProgressBar.tsx  PromptModal.tsx  PythonExtraCard.tsx  SideDrawer.tsx  TabBar.tsx  TimecodePicker.tsx  TranscriptEditor.tsx  UpdateBanner.tsx  UpdaterCard.tsx  icons.tsx
src/lib/: format.ts  tauri.ts
src/modules/: AudioFixModule.tsx  CorridorKeyModule.tsx  LogoRemoverModule.tsx  LogoTickerModule.tsx  RotobrushModule.tsx  SubtitlesModule.tsx  UtilsModule.tsx  VocalSplitModule.tsx
src/state/: hotkeys.ts  modules.tsx  navigation.tsx  updater.tsx  useModuleDrop.ts  usePipeline.ts  useSetup.ts
src/tabs/: MainTab.tsx  QueueTab.tsx  SetupTab.tsx  StyleTab.tsx
