[project]
name = "subtitle-worker"
version = "0.1.0"
description = "Whisper + FFmpeg worker for Subtitle Studio"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "faster-whisper>=1.0.3",
  "av>=12.0.0",
  "onnxruntime>=1.18.0",
  # Image I/O for chroma-key composite — pillow is light (~3 MB) and avoids
  # dragging in opencv just for resize + alpha-merge.
  "pillow>=10.4.0",
  "numpy>=1.26.0",
]

[dependency-groups]
dev = ["ruff>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
