[package]
name = "zonthor-studio"
version = "0.2.1"
description = "Zonthor Studio — portable multimedia toolkit (subtitles, chroma key, eye contact, audio fix)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "subtitle_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "io-util", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
once_cell = "1"
fontdb = "0.21"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
